cmake_minimum_required(VERSION 3.14)
project(CLion C)

set(CMAKE_C_STANDARD 90)

add_subdirectory(Status)
add_subdirectory(0201_SqList)
add_subdirectory(01-fundementary/helloworld)
add_subdirectory(01-fundementary/base_c)
add_subdirectory(01-fundementary/functionAbout)
add_subdirectory(01-fundementary/pointer_c)
add_subdirectory(01-fundementary/malloc_c)
add_subdirectory(01-fundementary/str_c)
add_subdirectory(01-fundementary/structure_c)
add_subdirectory(01-fundementary/union)
add_subdirectory(01-linklist)
add_subdirectory(01-array)
add_subdirectory(sortsAndSearch)

add_subdirectory(02-sort)
